Fixed less issue that prevented background from covering everything.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,1 +1,10 @@
 @import "colors.less";
+
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+}
+
